DTSCCI-3866 High severity refactors in helpers/mappers/validators (#7676)
* DTSCCI-3866

* DTSCCI-3866 clean up

* DTSCCI-3866 Clean up

* DTSCCI-3866 Clean up

* DTSCCI-3866 Clean up

---------

Co-authored-by: AbuSalam22 <136581242+AbuSalam22@users.noreply.github.com>